service-a/service.yml
apiVersion: v1
kind: Service
metadata:
  name: service-a
spec:
  selector:
    app: hello-world
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
